Add ability to translate chapter titles

--- a/htdocs/webapp/www/app/Templates/Default/Assets/css/style.css
+++ b/htdocs/webapp/www/app/Templates/Default/Assets/css/style.css
@@ -2528,6 +2528,15 @@ span.mdi.mdi-lead-pencil {
     font-size: 16px;
 }
 
+.book_title_alt {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.chapter_title_alt {
+    font-size: 20px;
+}
+
 .input_mode {
     font-size: 16px;
     color: #777;
